--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -25,3 +25,5 @@ springdoc.api-docs.path=/api-docs
 springdoc.swagger-ui.path=/swagger-ui.html
 springdoc.packagesToScan=fr.simplon.sondages.api.*
 springdoc.pathsToMatch=/sondages/*,/votes/*
+spring.sql.init.mode=never
+spring.jpa.defer-datasource-initialization=true
